changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Allow transports to not occupy the same spaces depending on the facing direction.
 common/map.c: tweak various move_type checks for transport
 doc/Developers/objects: update with special flag
 server/player.c: special handling for transport facings
Nicolas Weeger 2008-11-16

Reduce selling cost of Gourmet Mushrooms.  They were to easy to exploit
and abuse for massive cash influx. Requested change by meflin.
 /lib/artifacts
Rick Tanner 2008-11-11

Tentative fix for bug #1982043: Ruggilli immolation.
 server/disease.c: don't remove god-diven diseases.
Nicolas Weeger 2008-11-11

Fix for bug #2259992: I dont know how to apply the ... * (unpaid).
 include/ob_methods.h: new return value for methods.
 server/apply.c: don't display anything if player already warned.
Nicolas Weeger 2008-11-11

Tentative fix for bug #2094038: Monk Confusion...
 server/gods.c: don't try to update the 'no weapon' flag if the player is
 forbidden weapons, that messes with things.
Nicolas Weeger 2008-11-10

Remove obsolete 'color_fg' handling.
 common/image.c
Nicolas Weeger 2008-11-10

Merge smoothing information in New_Face, to simplify some.
 common/image.c
 include/face.h
Nicolas Weeger 2008-11-09

Apply patch #2040854: Patch to compile on OSX PPC, and to comply with ANSI C, by elliotbay.
Basically put an array definition in the .c instead of the .h.
 plugins/cfpython/include/cfpython.h
 plugins/cfpython/cfpython.c
Nicolas Weeger 2008-11-09

Fix for bug #2249875: 2.0 random say crashes.
Remove 'duplicate_dialog_information()', and merely clear FLAG_DIALOG_PARSED in