@@ -526,47 +526,6 @@ object *generate_treasure(treasurelist *t, int difficulty) {
     return tmp;
 }
 
-/**
- * This is a new way of calculating the chance for an item to have
- * a specific magical bonus.
- * The array has two arguments, the difficulty of the level, and the
- * magical bonus "wanted".
- */
-static const int difftomagic_list[DIFFLEVELS][MAXMAGIC+1] = {
-/*chance of magic    difficulty*/
-/* +0  +1 +2 +3 +4 */
-    { 95, 2, 2, 1, 0 }, /*1*/
-    { 92, 5, 2, 1, 0 }, /*2*/
-    { 85,10, 4, 1, 0 }, /*3*/
-    { 80,14, 4, 2, 0 }, /*4*/
-    { 75,17, 5, 2, 1 }, /*5*/
-    { 70,18, 8, 3, 1 }, /*6*/
-    { 65,21,10, 3, 1 }, /*7*/
-    { 60,22,12, 4, 2 }, /*8*/
-    { 55,25,14, 4, 2 }, /*9*/
-    { 50,27,16, 5, 2 }, /*10*/
-    { 45,28,18, 6, 3 }, /*11*/
-    { 42,28,20, 7, 3 }, /*12*/
-    { 40,27,21, 8, 4 }, /*13*/
-    { 38,25,22,10, 5 }, /*14*/
-    { 36,23,23,12, 6 }, /*15*/
-    { 33,21,24,14, 8 }, /*16*/
-    { 31,19,25,16, 9 }, /*17*/
-    { 27,15,30,18,10 }, /*18*/
-    { 20,12,30,25,13 }, /*19*/
-    { 15,10,28,30,17 }, /*20*/
-    { 13, 9,27,28,23 }, /*21*/
-    { 10, 8,25,28,29 }, /*22*/
-    {  8, 7,23,26,36 }, /*23*/
-    {  6, 6,20,22,46 }, /*24*/
-    {  4, 5,17,18,56 }, /*25*/
-    {  2, 4,12,14,68 }, /*26*/
-    {  0, 3, 7,10,80 }, /*27*/
-    {  0, 0, 3, 7,90 }, /*28*/
-    {  0, 0, 0, 3,97 }, /*29*/
-    {  0, 0, 0, 0,100}, /*30*/
-    {  0, 0, 0, 0,100}, /*31*/
-};
 
 
 /**
@@ -617,8 +576,219 @@ int level_for_item(const object *op, int difficulty, int retmult) {
 
 /**
  * Based upon the specified difficulty and upon the difftomagic_list array,
- * a random magical bonus is returned.  This is used when determine
- * the magical bonus created on specific maps.
+ * a random magical bonus is returned.  This is a new way of calculating the chance for an item to have
+ * a specific magical bonus
+ * The array has two arguments, the difficulty of the level, and the
+ * magical bonus "wanted".
+ */
+static const int difftomagic_list[DIFFLEVELS][MAXMAGIC+1] = {
+/*chance of magic    difficulty*/
+/* +0  +1 +2 +3 +4 */
+    { 94, 3, 2, 1, 0 }, /*1*/
+    { 94, 3, 2, 1, 0 }, /*2*/
+    { 94, 3, 2, 1, 0 }, /*3*/
+    { 94, 3, 2, 1, 0 }, /*4*/
+    { 94, 3, 2, 1, 0 }, /*5*/
+    { 90, 4, 3, 2, 1 }, /*6*/
+    { 90, 4, 3, 2, 1 }, /*7*/
+    { 90, 4, 3, 2, 1 }, /*8*/
+    { 90, 4, 3, 2, 1 }, /*9*/
+    { 90, 4, 3, 2, 1 }, /*10*/
+    { 85, 6, 4, 3, 2 }, /*11*/
+    { 85, 6, 4, 3, 2 }, /*12*/
+    { 85, 6, 4, 3, 2 }, /*13*/
+    { 85, 6, 4, 3, 2 }, /*14*/
+    { 85, 6, 4, 3, 2 }, /*15*/
+    { 81, 8, 5, 4, 3 }, /*16*/
+    { 81, 8, 5, 4, 3 }, /*17*/
+    { 81, 8, 5, 4, 3 }, /*18*/
+    { 81, 8, 5, 4, 3 }, /*19*/
+    { 81, 8, 5, 4, 3 }, /*20*/
+    { 75,10, 6, 5, 4 }, /*21*/
+    { 75,10, 6, 5, 4 }, /*22*/
+    { 75,10, 6, 5, 4 }, /*23*/
+    { 75,10, 6, 5, 4 }, /*24*/
+    { 75,10, 6, 5, 4 }, /*25*/
+    { 70,12, 7, 6, 5 }, /*26*/
+    { 70,12, 7, 6, 5 }, /*27*/
+    { 70,12, 7, 6, 5 }, /*28*/
+    { 70,12, 7, 6, 5 }, /*29*/
+    { 70,12, 7, 6, 5 }, /*30*/
+    { 70, 9,8 ,7 , 6 }, /*31*/
+    { 70, 9,8 ,7 , 6 }, /*32*/
+    { 70, 9,8 ,7 , 6 }, /*33*/
+    { 70, 9,8 ,7 , 6 }, /*34*/
+    { 70, 9,8 ,7 , 6 }, /*35*/
+    { 70, 6, 9, 8, 7 }, /*36*/
+    { 70, 6, 9, 8, 7 }, /*37*/
+    { 70, 6, 9, 8, 7 }, /*38*/
+    { 70, 6, 9, 8, 7 }, /*39*/
+    { 70, 6, 9, 8, 7 }, /*40*/
+    { 70, 3, 10, 9, 8 }, /*41*/
+    { 70, 3, 10, 9, 8 }, /*42*/
+    { 70, 3, 10, 9, 8 }, /*43*/
+    { 70, 3, 10, 9, 8 }, /*44*/
+    { 70, 3, 10, 9, 8 }, /*45*/
+    { 70, 2, 9, 10, 9 }, /*46*/
+    { 70, 2, 9, 10, 9 }, /*47*/
+    { 70, 2, 9, 10, 9 }, /*48*/
+    { 70, 2, 9, 10, 9 }, /*49*/
+    { 70, 2, 9, 10, 9 }, /*50*/
+    { 70, 2 ,7, 11, 10}, /*51*/
+    { 70, 2 ,7, 11, 10 }, /*52*/
+    { 70, 2 ,7, 11, 10 }, /*53*/
+    { 70, 2 ,7, 11, 10 }, /*54*/
+    { 70, 2 ,7, 11, 10 }, /*55*/
+    { 70, 2 ,5 ,12, 11 }, /*56*/
+    { 70, 2 ,5 ,12, 11 }, /*57*/
+    { 70, 2 ,5 ,12, 11 }, /*58*/
+    { 70, 2 ,5 ,12, 11 }, /*59*/
+    { 70, 2 ,5 ,12, 11 }, /*60*/
+    { 70, 2, 3, 13, 12 }, /*61*/
+    { 70, 2, 3, 13, 12 }, /*62*/
+    { 70, 2, 3, 13, 12 }, /*63*/
+    { 70, 2, 3, 13, 12 }, /*64*/
+    { 70, 2, 3, 13, 12 }, /*65*/
+    { 70, 2, 3, 12, 13 }, /*66*/
+    { 70, 2, 3, 12, 13 }, /*67*/
+    { 70, 2, 3, 12, 13 }, /*68*/
+    { 70, 2, 3, 12, 13 }, /*69*/
+    { 70, 2, 3, 12, 13 }, /*70*/
+    { 70, 2, 3, 11, 14 }, /*71*/
+    { 70, 2, 3, 11, 14 }, /*72*/
+    { 70, 2, 3, 11, 14 }, /*73*/
+    { 70, 2, 3, 11, 14 }, /*74*/
+    { 70, 2, 3, 11, 14 }, /*75*/
+    { 70, 2, 3, 10, 15 }, /*76*/
+    { 70, 2, 3, 10, 15 }, /*77*/
+    { 70, 2, 3, 10, 15 }, /*78*/
+    { 70, 2, 3, 10, 15 }, /*79*/
+    { 70, 2, 3, 10, 15 }, /*80*/
+    { 70, 2, 3, 9, 16  }, /*81*/
+    { 70, 2, 3, 9, 16  }, /*82*/
+    { 70, 2, 3, 9, 16  }, /*83*/
+    { 70, 2, 3, 9, 16  }, /*84*/
+    { 70, 2, 3, 9, 16  }, /*85*/
+    { 70, 2, 3, 8, 17  }, /*86*/
+    { 70, 2, 3, 8, 17  }, /*87*/
+    { 70, 2, 3, 8, 17  }, /*88*/
+    { 70, 2, 3, 8, 17  }, /*89*/
+    { 70, 2, 3, 8, 17  }, /*90*/
+    { 70, 2, 3, 7, 18  }, /*91*/
+    { 70, 2, 3, 7, 18  }, /*92*/
+    { 70, 2, 3, 7, 18  }, /*93*/
+    { 70, 2, 3, 7, 18  }, /*94*/
+    { 70, 2, 3, 7, 18  }, /*95*/
+    { 70, 2, 3, 6, 19  }, /*96*/
+    { 70, 2, 3, 6, 19  }, /*97*/
+    { 70, 2, 3, 6, 19  }, /*98*/
+    { 70, 2, 3, 6, 19  }, /*99*/
+    { 70, 2, 3, 6, 19  }, /*100*/
+    { 70, 2, 3, 6, 19  }, /*101*/
+    { 70, 2, 3, 6, 19  }, /*101*/
+    { 70, 2, 3, 6, 19  }, /*102*/
+    { 70, 2, 3, 6, 19  }, /*103*/
+    { 70, 2, 3, 6, 19  }, /*104*/
+    { 70, 2, 3, 6, 19  }, /*105*/
+    { 70, 2, 3, 6, 19  }, /*106*/
+    { 70, 2, 3, 6, 19  }, /*107*/
+    { 70, 2, 3, 6, 19  }, /*108*/
+    { 70, 2, 3, 6, 19  }, /*109*/
+    { 70, 2, 3, 6, 19  }, /*110*/
+    { 70, 2, 3, 6, 19  }, /*111*/
+    { 70, 2, 3, 6, 19  }, /*112*/
+    { 70, 2, 3, 6, 19  }, /*113*/
+    { 70, 2, 3, 6, 19  }, /*114*/
+    { 70, 2, 3, 6, 19  }, /*115*/
+    { 70, 2, 3, 6, 19  }, /*116*/
+    { 70, 2, 3, 6, 19  }, /*117*/
+    { 70, 2, 3, 6, 19  }, /*118*/
+    { 70, 2, 3, 6, 19  }, /*119*/
+    { 70, 2, 3, 6, 19  }, /*120*/
+    { 70, 2, 3, 6, 19  }, /*121*/
+    { 70, 2, 3, 6, 19  }, /*122*/
+    { 70, 2, 3, 6, 19  }, /*123*/
+    { 70, 2, 3, 6, 19  }, /*124*/
+    { 70, 2, 3, 6, 19  }, /*125*/
+    { 70, 2, 3, 6, 19  }, /*126*/
+    { 70, 2, 3, 6, 19  }, /*127*/
+    { 70, 2, 3, 6, 19  }, /*128*/
+    { 70, 2, 3, 6, 19  }, /*129*/
+    { 70, 2, 3, 6, 19  }, /*130*/
+    { 70, 2, 3, 6, 19  }, /*131*/
+    { 70, 2, 3, 6, 19  }, /*132*/
+    { 70, 2, 3, 6, 19  }, /*133*/
+    { 70, 2, 3, 6, 19  }, /*134*/
+    { 70, 2, 3, 6, 19  }, /*135*/
+    { 70, 2, 3, 6, 19  }, /*136*/
+    { 70, 2, 3, 6, 19  }, /*137*/
+    { 70, 2, 3, 6, 19  }, /*138*/
+    { 70, 2, 3, 6, 19  }, /*139*/
+    { 70, 2, 3, 6, 19  }, /*140*/
+    { 70, 2, 3, 6, 19  }, /*141*/
+    { 70, 2, 3, 6, 19  }, /*142*/
+    { 70, 2, 3, 6, 19  }, /*143*/
+    { 70, 2, 3, 6, 19  }, /*144*/
+    { 70, 2, 3, 6, 19  }, /*145*/
+    { 70, 2, 3, 6, 19  }, /*146*/
+    { 70, 2, 3, 6, 19  }, /*147*/
+    { 70, 2, 3, 6, 19  }, /*148*/
+    { 70, 2, 3, 6, 19  }, /*149*/
+    { 70, 2, 3, 6, 19  }, /*150*/
+    { 70, 2, 3, 6, 19  }, /*151*/
+    { 70, 2, 3, 6, 19  }, /*152*/
+    { 70, 2, 3, 6, 19  }, /*153*/
+    { 70, 2, 3, 6, 19  }, /*154*/
+    { 70, 2, 3, 6, 19  }, /*155*/
+    { 70, 2, 3, 6, 19  }, /*156*/
+    { 70, 2, 3, 6, 19  }, /*157*/
+    { 70, 2, 3, 6, 19  }, /*158*/
+    { 70, 2, 3, 6, 19  }, /*159*/
+    { 70, 2, 3, 6, 19  }, /*160*/
+    { 70, 2, 3, 6, 19  }, /*161*/
+    { 70, 2, 3, 6, 19  }, /*162*/
+    { 70, 2, 3, 6, 19  }, /*163*/
+    { 70, 2, 3, 6, 19  }, /*164*/
+    { 70, 2, 3, 6, 19  }, /*165*/
+    { 70, 2, 3, 6, 19  }, /*166*/
+    { 70, 2, 3, 6, 19  }, /*167*/
+    { 70, 2, 3, 6, 19  }, /*168*/
+    { 70, 2, 3, 6, 19  }, /*169*/
+    { 70, 2, 3, 6, 19  }, /*170*/
+    { 70, 2, 3, 6, 19  }, /*171*/
+    { 70, 2, 3, 6, 19  }, /*172*/
+    { 70, 2, 3, 6, 19  }, /*173*/
+    { 70, 2, 3, 6, 19  }, /*174*/
+    { 70, 2, 3, 6, 19  }, /*175*/
+    { 70, 2, 3, 6, 19  }, /*176*/
+    { 70, 2, 3, 6, 19  }, /*177*/
+    { 70, 2, 3, 6, 19  }, /*178*/
+    { 70, 2, 3, 6, 19  }, /*179*/
+    { 70, 2, 3, 6, 19  }, /*180*/
+    { 70, 2, 3, 6, 19  }, /*181*/
+    { 70, 2, 3, 6, 19  }, /*182*/
+    { 70, 2, 3, 6, 19  }, /*183*/
+    { 70, 2, 3, 6, 19  }, /*184*/
+    { 70, 2, 3, 6, 19  }, /*185*/
+    { 70, 2, 3, 6, 19  }, /*186*/
+    { 70, 2, 3, 6, 19  }, /*187*/
+    { 70, 2, 3, 6, 19  }, /*188*/
+    { 70, 2, 3, 6, 19  }, /*189*/
+    { 70, 2, 3, 6, 19  }, /*190*/
+    { 70, 2, 3, 6, 19  }, /*191*/
+    { 70, 2, 3, 6, 19  }, /*192*/
+    { 70, 2, 3, 6, 19  }, /*193*/
+    { 70, 2, 3, 6, 19  }, /*194*/
+    { 70, 2, 3, 6, 19  }, /*195*/
+    { 70, 2, 3, 6, 19  }, /*196*/
+    { 70, 2, 3, 6, 19  }, /*197*/
+    { 70, 2, 3, 6, 19  }, /*198*/
+    { 70, 2, 3, 6, 19  }, /*199*/
+    { 70, 2, 3, 6, 19  }, /*200*/
+
+};
+
+/** This is used when determining the magical bonus created on specific maps.
  *
  * @param difficulty
  * difficulty.
