@@ -14,6 +14,12 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Apply patch #2305993: Random Item generation difficutly table expansion,
+courtesy meflin.
+ common/treasure.c
+ include/treasure.h
+Nicolas Weeger 2008-11-17
+
 Allow transports to not occupy the same spaces depending on the facing direction.
  common/map.c: tweak various move_type checks for transport
  doc/Developers/objects: update with special flag
